# pdf2qa

./: .env.example  .gitignore  README.md  README_NEW.md  README_USAGE.md  SETUP.md  TESTING.md  config.yaml  costs.json  pyproject.toml  test_api_permissions.py  test_env_debug.py  test_exact_curl.py  test_models.py  test_openai.py  tqdm.py  yaml.py
pdf2qa/: __init__.py  cli.py  pipeline.py
pdf2qa/exporters/: __init__.py  content_exporter.py  qa_exporter.py
pdf2qa/extractor/: __init__.py  llama_extractor.py
pdf2qa/models/: __init__.py  chunk.py  document.py  qa_pair.py  statement.py
pdf2qa/parser/: __init__.py  llama_parser.py
pdf2qa/qa_generator/: __init__.py  qa_generator.py
pdf2qa/utils/: __init__.py  config.py  cost_tracker.py  logging.py  summary_generator.py
schemas/: statement.json
scripts/: codebase_index.txt  index_codebase.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py  test_config_simple.py  test_logging.py  test_models.py  test_models_simple.py  test_parser_chunking.py
