[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2qa"
version = "0.1.0"
description = "A library to convert PDFs and other documents into LLM-ready content and Q/A pairs for fine-tuning"
readme = "README.md"
authors = [
    {name = "PDF2QA Team"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "llama-cloud-services>=0.1.0",
    "openai>=1.0.0",
    "pydantic>=1.10.0",
    "PyMuPDF>=1.22.0",
    "click>=8.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
pdf2qa = "pdf2qa.cli:main"

[tool.setuptools]
packages = ["pdf2qa"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
